test/tests/errors/error-array-cannot-override.sm
// true
// false
// false
/**/
/**/

program {
    array x[1:1]: int;
    x = 1;
}